IBX-3528: Fixed collapse toggler rotation (#756)

--- a/src/bundle/Resources/public/scss/_collapse.scss
+++ b/src/bundle/Resources/public/scss/_collapse.scss
@@ -49,6 +49,12 @@
             max-width: calc(100% - #{calculateRem(120px)});
         }
 
+        &--status {
+            &.collapsed {
+                transform: rotate(180deg);
+            }
+        }
+
         .ibexa-collapse__header-label {
             white-space: nowrap;
             overflow: hidden;
